# src

./: README.md
alpha/: Makefile  alpha.c
awesome/: bg.lua  ffi.lua  rc.lua
biohazard/: Makefile  bio-lua.lua  bio.cc  bio.css  bio.js  common.h  construct.pl  defaults.js  gtk.cc  point.lua  svg.cc
dvdrip/: Makefile  README.md  dvdrip.cc  dvdrip.h  dvdrip.i  dvdrip.swg  rip.lua
dynasm/: Makefile  README.md  dynasm-riscv.md  jit1-r64.c  jit2.dasc  jit5.dasc
euro/: Makefile  euro.cc  geometry.cc  geometry.h
eval/: Makefile  README.md  eval.h  expr.c  main.c  parse.y  tokenize.lex
fdt/: Makefile  README.md  fdt.c
flac/: Makefile  Makefile~  README  README.md  README~  flac-scan.go  flac-tag.pl  flac.go  flac.go~  m3u-meta.pl  media.js  ogg-tag.pl  ogg-tag.pl~  opus-tag.pl  reflac.pl  reflac.pl~  rf.pl  t.pl  tag.pl  tag.pl~
gbm/: Makefile  Makefile~  a.out  abc  draw.c  drm  drm-gbm.c  drm.c  drm.c~  example-1  example-1.c  example-1.c~  example-2  example-2.c  example-2.c~  example-3  example-3.c  example-3.c~  example-4  example-4.c  example-5  example-5.c  example-5.c~  example-6.c  formats  formats.c  formats.c~  gbm-format.c
gdkscale/: Makefile  gdkscale.c  pixbuf2cairo.c  pixbuf_cairo_pango.c  scale.cc
gegl/: Makefile  gegl-test-load.c
gll/: gll.c
glx/: Makefile  ex.c  ex01.c  ex02.c  ex03.c  ex04.c  ex2.c  ex3.c  ex4.c  glitz.c  glx.c  glxgears.c  honeycomb.c  mygl.c  mygl.h  mygl3.c  mymath.c  mymath.h  plane.c  test.c  tmath.c  tri3.c  xcb.c
rust/app/: Cargo.toml
rust/app/src/: main.rs
rust/cairo/: Cargo.toml
rust/cairo/src/: main.rs
(+262 files in other folders)
