[package]
name = "cairo_gdk"
version = "0.0.1"
authors = ["Ross"]
edition = "2024"

[profile.release]
opt-level = 'z'     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# lto = true          # Enable Link Time Optimization
# panic = 'abort'     # Abort on panic

[dependencies]
rand = "0.9.2"
png = "0.18.0"
cairo-rs = { version = "0.21.1", features = ["png"] }
gtk = { version = "0.10.3", package = "gtk4" }
gdk-pixbuf = { version = "0.21.5",  package = "gdk-pixbuf" }
